--- a/video-player/.gitignore
+++ b/video-player/.gitignore
@@ -14,6 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+../.idea/
 .idea
 *.iws
 *.iml
@@ -31,3 +32,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Maven ###
+.mvn/
+mvnw
+mvnw.cmd
+
